@@ -33,6 +33,10 @@
 ; It's suggested to enable the fix to make sprite behavior consistent between the first and all the next level reloads.
     !initial_facing_fix = 1
 
+; If 1, it fixes the issue where you can drop the reserve item in the item box
+; by pressing Select while Mario is dying or while the Retry prompt is shown.
+    !item_box_fix = 1
+
 ; If 1, start+select out of a level is always possible.
 ; Otherwise, it's only possible with the instant Retry option (or if the level is already beaten like vanilla).
     !always_start_select = 0
